--- a/45_Client_Server_APIs_T/45_Client_Server_APIs_T/Base.lproj/Main.storyboard
+++ b/45_Client_Server_APIs_T/45_Client_Server_APIs_T/Base.lproj/Main.storyboard
@@ -8,13 +8,13 @@
         <!--Root View Controller-->
         <scene sceneID="722-cD-bJa">
             <objects>
-                <tableViewController id="Cxt-xR-4fp" sceneMemberID="viewController">
+                <tableViewController id="Cxt-xR-4fp" customClass="SiSFriendsViewTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="pA9-YI-GPT">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="X3A-B6-HWB">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="X3A-B6-HWB" customClass="sis">
                                 <rect key="frame" x="0.0" y="92" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="X3A-B6-HWB" id="Nfc-rA-t1Y">
